--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -43,7 +43,8 @@ form{
 }
 
 .md-sidenav-left{
-  width: 343px;
+  max-width: 340px;
+  width: 35%;
   padding: 20px 30px;
   background-color: #292c33;
   position: relative;
@@ -246,7 +247,8 @@ md-content{
 }
 
 .md-sidenav-right {
-  width: 355px;
+  width: 35%;
+  max-width: 500px;
   background-color: #292c33;
   padding: 32px 75px;
   color: #fff;
